--- a/Ecommerce_FE/package.json
+++ b/Ecommerce_FE/package.json
@@ -11,9 +11,8 @@
   },
   "dependencies": {
     "@tailwindcss/forms": "^0.5.9",
-    "autoprefixer": "^10.4.20",
+    "ecommerce-fe": "file:",
     "flowbite-react": "^0.10.2",
-    "postcss": "^8.4.49",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0"
@@ -21,14 +20,17 @@
   "devDependencies": {
     "@eslint/js": "^9.13.0",
     "@iconify/react": "^5.0.2",
+    "@types/node": "^22.10.1",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9.13.0",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.11.0",
+    "postcss": "^8.4.49",
     "tailwindcss": "^3.4.15",
     "vite": "^5.4.10"
   }
