--- a/Ecommerce_BE/package.json
+++ b/Ecommerce_BE/package.json
@@ -23,10 +23,12 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.26.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dotenv": "^16.4.6",
     "express": "^4.21.1",
+    "jsonwebtoken": "^9.0.2",
     "mssql": "^11.0.1",
     "nodemon": "^3.1.7"
   }
