--- a/Ecommerce_FE/package.json
+++ b/Ecommerce_FE/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/forms": "^0.5.9",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.9",
     "flowbite-react": "^0.10.2",
