--- a/Ecommerce_FE/package.json
+++ b/Ecommerce_FE/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.3.1",
     "react-loading": "^2.0.3",
     "react-router-dom": "^6.28.0",
+    "react-scroll": "^1.9.0",
     "react-toastify": "^10.0.6"
   },
   "devDependencies": {
