--- a/Ecommerce_BE/package.json
+++ b/Ecommerce_BE/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.26.0",
+    "axios": "^1.7.9",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
